// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FictionHeader custom header 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <header
          className="header"
        >
          <img
            alt="no-username-avatar"
            className="circle-avatar"
            height="34"
            src="https://loremflickr.com/300/300"
            width="34"
          />
          <div
            className="meta"
          >
            <p
              className="author"
            >
              Helen Aguilar
            </p>
            <p
              className="date-time"
            >
              Le
               
              <time
                dateTime="2018-07-09"
                pubdate={true}
              >
                09/07/2018
              </time>
            </p>
          </div>
        </header>
        <hr />
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                FictionHeader
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                custom header
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                className="css-4akams"
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      FictionHeader
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          authorFullname
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              Helen Aguilar
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          publishedDate
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              2018-07-09
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          circleAvatar
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  src
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'https://loremflickr.com/300/300'
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  className="css-py33tc"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  FictionHeader
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        authorFullname
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no author specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        publishedDate
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no published date specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        circleAvatar
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          }
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FictionHeader default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <header
          className="header"
        >
          <img
            alt="no-username-avatar"
            className="circle-avatar"
            height="34"
            src="/static2/img/icons/avatar.png"
            width="34"
          />
          <div
            className="meta"
          >
            <p
              className="author"
            >
              no author specified
            </p>
            <p
              className="date-time"
            >
              Le
               
              <time
                dateTime="no published date specified"
                pubdate={true}
              >
                no published date specified
              </time>
            </p>
          </div>
        </header>
        <hr />
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                FictionHeader
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                default
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                className="css-4akams"
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      FictionHeader
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  className="css-py33tc"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  FictionHeader
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        authorFullname
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no author specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        publishedDate
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no published date specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        circleAvatar
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          }
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FictionHeader playground 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <header
          className="header"
        >
          <img
            alt="no-username-avatar"
            className="circle-avatar"
            height="34"
            src="https://loremflickr.com/300/300"
            width="34"
          />
          <div
            className="meta"
          >
            <p
              className="author"
            >
              Helen Aguilar
            </p>
            <p
              className="date-time"
            >
              Le
               
              <time
                dateTime="2018-07-09"
                pubdate={true}
              >
                09/07/2018
              </time>
            </p>
          </div>
        </header>
        <hr />
      </div>
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          onClick={[Function]}
          style={
            Object {
              "background": "#28c",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div
          style={undefined}
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                FictionHeader
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                playground
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                className="css-4akams"
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      FictionHeader
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          authorFullname
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              Helen Aguilar
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          publishedDate
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              2018-07-09
                            </span>
                            "
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          circleAvatar
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  src
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'https://loremflickr.com/300/300'
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  className="css-py33tc"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h2
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  FictionHeader
                  " Component
                </h2>
                <table
                  className="css-1ytzlk7"
                >
                  <thead>
                    <tr>
                      <th
                        className="css-d52hbj"
                      >
                        property
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        propType
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        required
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        default
                      </th>
                      <th
                        className="css-d52hbj"
                      >
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        authorFullname
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no author specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        publishedDate
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          no published date specified
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                    <tr>
                      <td
                        className="css-1ygfcef"
                      >
                        circleAvatar
                      </td>
                      <td
                        className="css-1ygfcef"
                      >
                        <span>
                          unknown
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        -
                      </td>
                      <td
                        className="css-d52hbj"
                      >
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          }
                        </span>
                      </td>
                      <td
                        className="css-d52hbj"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
